tests/miniJava/neg/000265_mutation.MiniJava
class java { public static void Main else String [ ] java ) { { } } }
